Changelog
=========

4.4-dev - (unreleased)
----------------------

4.3 - (2012-01-03)
------------------

4.2 - (2011-12-16)
------------------
* Feature: Added mime-types vocabulary
  [voineali #4815]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [ghicaale #4301]

0.3 - (2010-11-10)
------------------
* Bug fix: Take version from version.txt
  [voineali]

0.2 - (2010-11-10)
------------------
* Bug fix: Import eea.vocab profile only if current profile selected
  [voineali]

0.1 - (2010-04-13)
------------------
* Initial release
